# MCG64

./: .gitignore  CMakeLists.txt
common/: CMakeLists.txt
common/infra/src/database/: baserepository.cpp  baserepository.h  databasemanager.cpp
common/infra/src/models/: patient.cpp  patient.h  user.h
common/infra/src/patient/: patientlistform.cpp  patientlistform.h  patientlistform.ui
common/infra/src/plugin/: IPlugin.h  pluginmanager.cpp  pluginmanager.h
common/infra/src/repositories/: patientrepository.cpp  patientrepository.h  userrepository.cpp  userrepository.h
core/: CMakeLists.txt
core/src/: main.cpp  mainwindow.cpp  mainwindow.h
infra/src/database/: baserepository.cpp  databasemanager.cpp  databasemanager.h
infra/src/models/: user.cpp  user.h
infra/src/plugin/: IPlugin.h  pluginmanager.cpp  pluginmanager.h
infra/src/repositories/: userrepository.h
plugins/: CMakeLists.txt
plugins/AnalysisPlugin/: CMakeLists.txt
plugins/AnalysisPlugin/src/: analysisform.cpp  analysisform.h  analysisform.ui
plugins/PatientsPlugin/: CMakeLists.txt
plugins/PatientsPlugin/src/: patientsplugin.cpp  patientsplugin.h  patientsplugin.ui
plugins/ReportPlugin/: CMakeLists.txt
plugins/ReportPlugin/src/: reportdialog.cpp  reportdialog.h  reportdialog.ui  reportplugin.cpp  reportplugin.h
